tests/NormalTests/paczka1/small_fuzzy/14057685.err
Error in line 3: iCH0A A128 72,8
Error in line 7: iCH0A S981 57,56
Error in line 8: ZUBEkKQ A128 44,8
Error in line 6: iCH0A S981 39,7
Error in line 2: I2ldrLmb S981 83,5
